# worg

./: .gitignore  Cargo.toml  README.md  WORG.md  w.org
crates/worg-agent/: Cargo.toml
crates/worg-agent/src/: lib.rs  llm.rs  loader.rs  loop_.rs  scheduler.rs  tool.rs  tool_registry.rs  types.rs
crates/worg-agent/src/tools/: bash.rs  brandwork.rs  mod.rs  read.rs  shell.rs  substrate.rs  video.rs  wavelet.rs  web.rs  worg.rs  write.rs
crates/worg-agent/tests/: director_tool_coverage.rs  parity.rs
crates/worg-bench/: Cargo.toml  README.md
crates/worg-bench/specs/01-basic/: comment-keywords.toml  inline-markup-nested.toml  priority-cookies-and-tags.toml  property-drawer.toml  tags-and-priority.toml  todo-headline.toml
crates/worg-bench/specs/02-composition/: affiliated-keywords.toml  clock-entries.toml  logbook-drawer.toml  multi-drawer-order.toml  nested-children.toml  nested-list-deep.toml  repeating-timestamp.toml  source-block.toml
crates/worg-bench/specs/03-planning/: constraints-drawer.toml  cross-referenced-plan.toml  decision-log-with-revocation.toml  incident-postmortem.toml  orchestrator-board.toml  sprint-board-from-brief.toml  three-level-plan.toml
crates/worg-bench/specs/04-mutation/: extract-deadline-from-prose.toml  merge-two-tasks.toml  revoke-decision.toml  transition-and-cookie-update.toml  update-clock-total.toml
crates/worg-bench/specs/05-blocks/: bash-pipeline-failure-recovery.toml  bash-set-pipefail-heredoc.toml  lua-coroutine-producer.toml  lua-metatables.toml  noweb-references.toml
crates/worg-bench/specs/06-tables/: table-in-quote.toml  table-with-hlines-and-groups.toml  tblfm-named-refs.toml
crates/worg-bench/src/: llm.rs  main.rs  report.rs  runner.rs  spec.rs  validate.rs
crates/worg-cli/: Cargo.toml
crates/worg-cli/src/: main.rs
crates/worg-cli/tests/: concurrent_claim.rs  mutation_ops.rs  orch_board.rs  orch_export_agents.rs  orch_export_tasks.rs  orch_import_runs.rs
crates/worg-cli/tests/fixtures/: task_autoloop_iteration_expected.json
crates/worg-lint/: Cargo.toml
crates/worg-lint/src/: lib.rs
crates/worg-lint/tests/: wavelet_commercial_lints_clean.rs
crates/worg-nif/: Cargo.toml
crates/worg-nif/src/: lib.rs
crates/worg-orch/: Cargo.toml
crates/worg-orch/src/: lib.rs  walker.rs
crates/worg-parse/: Cargo.toml
crates/worg-parse/src/: lib.rs
crates/worg-query/: Cargo.toml
crates/worg-query/src/: lib.rs
crates/worg-wasi/: Cargo.toml
crates/worg-wasi/src/: lib.rs
crates/worg-wasm/: Cargo.toml
crates/worg-wasm/src/: lib.rs
docs/: WORG_STUDIO_INTEGRATION.md
elixir/worg/: .gitignore  README.md  mix.exs
elixir/worg-agent/: .gitignore  mix.exs
elixir/worg-agent/lib/: worg_agent.ex
elixir/worg-agent/lib/worg_agent/: application.ex  llm.ex  loader.ex  loop.ex  run.ex  scheduler.ex  sync.ex  tool.ex  tool_registry.ex
elixir/worg-agent/lib/worg_agent/llm/: response.ex  stream.ex  tool_call.ex
elixir/worg-agent/lib/worg_agent/loader/: agent.ex  plan.ex  task.ex
elixir/worg-agent/lib/worg_agent/tools/: bash.ex  brandwork_brief.ex  brandwork_resolve.ex  frame_judge.ex  lua_eval.ex  read.ex  shell_wrapper.ex  video_helpers.ex  video_judge.ex  wavelet_character_define.ex  wavelet_lint.ex  wavelet_render.ex  wavelet_screenplay_validate.ex  write.ex
elixir/worg-agent/test/: worg_agent_test.exs
elixir/worg-agent/test/fixtures/wb-orch/: agents.json
elixir/worg-agent/test/fixtures/wb-orch/tasks/: claim-issue.json  close-issue.json  commit-push.json  deploy.json  implement.json  orient.json  pick-issue.json  verify.json
elixir/worg-agent/test/integration/: full_pipeline_test.exs
elixir/worg-agent/test/worg_agent/: llm_stream_test.exs  llm_test.exs  loader_test.exs  loop_test.exs  run_test.exs  scheduler_test.exs  sync_test.exs  tool_registry_test.exs
elixir/worg-agent/test/worg_agent/llm/: response_test.exs  stream_test.exs  tool_call_test.exs
elixir/worg-agent/test/worg_agent/tools/: bash_test.exs  frame_judge_test.exs  lua_eval_test.exs  read_test.exs  shell_wrapper_test.exs  video_judge_test.exs  write_test.exs
elixir/worg/lib/: worg.ex
elixir/worg/lib/worg/: atomic_file.ex  exec.ex  load_if.ex  parser.ex  tangle.ex
elixir/worg/test/: worg_test.exs
elixir/worg/test/worg/: exec_test.exs  load_if_test.exs  smoke_test.exs  tangle_test.exs
examples/: mini-coffee-mapped.org  studio-orchestrator.org
examples/plugins/mcp-federate/: manifest.org
examples/plugins/worg-dashboard/: manifest.org
parity-fixtures/: README.md
parity-fixtures/single-round-text/: agent.org  expected.json  llm-script.json
parity-fixtures/tool-then-text/: agent.org  brief.txt  expected.json  llm-script.json
proposed/: README.org
proposed/agents/: wavelet-director.org  workhorse.org
proposed/examples/skills/watershed-autoloop/: skill.org
proposed/plans/: wavelet-commercial.org
