[package]
name = "worg-cli"
description = "`worg` command-line tool. parse, query, lint, render."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "worg"
path = "src/main.rs"

[dependencies]
worg-parse = { path = "../worg-parse" }
worg-query = { path = "../worg-query" }
worg-lint  = { path = "../worg-lint" }
worg-orch  = { path = "../worg-orch" }
orgize = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
