[package]
name = "worg-lint"
description = "Lint rules for worg documents — enforces WORG.md conventions."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
worg-parse = { path = "../worg-parse" }
worg-query = { path = "../worg-query" }
orgize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
