[package]
name = "worg-query"
description = "Agenda-style queries over a worg document. Find headlines by tag, property, state, or readiness — without the org-agenda DSL."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
worg-parse = { path = "../worg-parse" }
orgize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
