[package]
name = "worg-wasm"
description = "wasm-bindgen wrapper for worg-parse + worg-query + worg-lint. Builds to two targets via wasm-pack: nodejs (for workbook-cli) and web (for the browser runtime)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worg-parse = { path = "../worg-parse" }
worg-query = { path = "../worg-query" }
worg-lint  = { path = "../worg-lint" }
orgize     = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
serde = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
